obs elements implemented

--- a/src/app/browsersource/events/events.component.html
+++ b/src/app/browsersource/events/events.component.html
@@ -8,6 +8,7 @@
     <app-video *ngIf="event?.type === 'video'" [video]=event [viewport]="viewport"></app-video>
     <app-audio *ngIf="event?.type === 'audio'" [audio]=event></app-audio>
     <app-tts *ngIf="event?.type === 'tts'" [tts]=event></app-tts>
+    <app-obs *ngIf="event?.type === 'obs'" [event]=event></app-obs>
   </div>
   
   <div id="cover" [ngStyle]="{
