--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -7,7 +7,7 @@
   <nb-card-body>
     You can start by enabling Twitch APIs in order to receive event data from twitch.
     <br>
-    Then go to Web Source in order to set your events up.
+    Then go to Browser Source in order to set your events up.
     <br>
     <br>
     <br>
