--- a/src/app/dashboard/twitch/elements/elements.component.scss
+++ b/src/app/dashboard/twitch/elements/elements.component.scss
@@ -208,6 +208,12 @@ input {
     display: flex;
     justify-content: space-between;
 }
+.obs-container {
+    min-height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 .message-container {
 
 }
