--- a/src/app/dashboard/twitch/elements/elements.component.html
+++ b/src/app/dashboard/twitch/elements/elements.component.html
@@ -38,6 +38,15 @@
                                         In order for cCarbn to control your scenes/sources in OBS you must install the latest <a href="https://github.com/obsproject/obs-websocket/releases" target="_blank">OBS-websocket plugin</a> (pre-release version is fine). Then set your browser source permissions to <strong>Advanced</strong> or higher
                                     </div>
                                 </nb-list-item>
+                                <nb-list-item>
+                                    <div>
+                                        Two very useful plugins for obs are <a href="https://obsproject.com/forum/resources/move-transition.913/" target="_blank">Move transition</a> and <a href="https://obsproject.com/forum/resources/streamfx-for-obs%C2%AE-studio.578/" target="_blank">StreamFX</a>.
+                                        <br>
+                                        These aren't required but they allow you to create animations and effects attached to sources as filters, which can be interacted with via cCarbn.
+                                        <br>
+                                        <a href="https://www.youtube.com/watch?v=6eSgiowHTCc" target="_blank">Here</a>'s a brief tutorial on how to setup those filters.
+                                    </div>
+                                </nb-list-item>
                             </nb-list>
                         </nb-accordion-item-body>
                     </nb-accordion-item>
